<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="246dp"
        android:layout_height="239dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="83dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_music_note_fill0_wght400_grad0_opsz48" />

    <EditText
        android:id="@+id/txtMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:ems="15"
        android:hint="@string/app_hint_music"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHint="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:ems="15"
        android:hint="@string/app_hint_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHint="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMusic" />

    <EditText
        android:id="@+id/txtBand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:ems="15"
        android:hint="@string/app_hint_band"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="19dp"
        android:text="@string/app_save"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:text="@string/app_list"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnClean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="49dp"
        android:text="@string/app_clean"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnList"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="310dp"
        android:layout_height="148dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBand">

        <RadioButton
            android:id="@+id/radioSertanejo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/app_sertanejo"
            android:textColor="@color/colorSecondary"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/radioRock"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/app_rock"
            android:textColor="@color/colorSecondary"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/app_other"
            android:textColor="@color/colorSecondary"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>